--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,103 @@
 <%- include ("partials/header") -%>
-	<h1>25Maj</h1>
+	<div class="pageHeaderFixed" style="background-image: url(/images/homeHeader.jpg)"></div>
+	<div class="pageHeaderSpace"></div>
+	<div class="bellowFixedHeader"></div>
+	<div class="section padded white">
+		<div class="contentWidth">
+			<div class="inlineHalf home2Boxes">
+				<div class="inline">
+					<div class="blueBox">
+						<div class="icon">
+							<img src="/icons/deca.png">
+						</div>
+						<div class="title">Besplatni programi<br>za decu</div>
+					</div>
+				</div>
+				<div class="inline">
+					<div class="blueBox">
+						<div class="icon">
+							<img src="/icons/penzioneri.png">
+						</div>
+						<div class="title">Besplatni programi<br>za penzionere</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="section">
+		<div class="topFade"></div>
+		<div class="bottomFade"></div>
+		<div class="imageBackground padded" style="background-image: url(/images/voda.jpg);">
+			<div class="contentWidth">
+				<div class="sectionTitle">NAJNOVIJA OBAVEŠTENJA</div>
+				<div class="obavestenja">
+					<div class="obavestenje">
+						<div class="date">13.05.2022.</div>
+						<div class="title">Otkazivanje termina 14/05/2022</div>
+						<div class="text">
+							Usled održavanja takmičenja na zatvorenom bazenu sportskog centra 25. maj otkazuju se sledeći termini za građanstvo u subotu 14. maja 2022. godine.
+						</div>
+						<div class="buttonWrap">
+							<div class="button">
+								Pročitaj
+							</div>
+						</div>
+					</div>
+					<div class="obavestenje">
+						<div class="date">13.05.2022.</div>
+						<div class="title">Otkazivanje večernjeg termina 07/05/2022</div>
+						<div class="text">
+							Usled održavanja Letnje lige Beograda u plivanju, otkazuje se večernji termin za građanstvo u subotu 07.05. od 21 do 23 časa.
+						</div>
+						<div class="buttonWrap">
+							<div class="button">
+								Pročitaj
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="padded" style="text-align: center;">
+					<div class="blueButton">
+						<a href="#">SVA OBAVEŠTENJA</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="section white padded">
+		<div class="contentWidth">
+			<div class="sectionTitle">PRIJAVA ZA NEWSLETTER</div>
+			<div class="titleIconSeparator">
+				<div class="line"></div>
+				<div class="icon">
+					<img src="/icons/notification.png">
+				</div>
+				<div class="line"></div>
+			</div>
+			<div class="smallText">
+				Ostavite e-mail ili mobilni telefon ( ili oba :) ) i budite u toku sa najnovijim dešavanjima vezano za 25. Maj.<br>
+				Vaši podaci se čuvaju enkriptovani i služe isključivo radi kontakta.  
+			</div>
+			<div class="smallContent" style="margin-top:10px">
+				<div class="newsletter inlineHalf">
+					<form>
+						<div class="inline">
+							<input type="email" placeholder="E-mail">
+						</div>
+						<div class="inline">
+							<input type="tel" placeholder="Telefon">
+						</div>
+					</form>
+				</div>
+				<div style="text-align: center;margin-top:10px">
+					<div class="blueButton">
+						<a href="#">PRIJAVA</a>
+					</div>
+				</div>
+			</div>
+			
+		</div>
+	</div>
 <%- include ("partials/footer") -%>
