--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
     <title><%=title%></title>
 
     <!-- Bootstrap -->
-    <link href="/rs/css/style.css?<%=fileVersion%>" rel="stylesheet">
+    <link href="/css/style.css?<%=fileVersion%>" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/favicon.png">
     <meta property="og:title" content="<%=ogtitle%>" />
     <meta property="og:type" content="website" />
@@ -25,3 +25,5 @@
   </head>
   <body>
     <%- include ("partials/menu") -%>
+    <div class="pageContent">
+      <div class="headerSeparator"></div>
