--- a/views/home.ejs
+++ b/views/home.ejs
@@ -100,4 +100,12 @@
 			
 		</div>
 	</div>
+	<div class="section white">
+		<div id="map"></div>
+		<script src="/js/map.js?<%=fileVersion%>"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsUyoMs0Ba_6bPbtD5A5_1yOJXjjMYsMQ&amp;callback=initMap" async="" defer=""></script>
+        <div class="navButton blueButton">
+        	<a href="https://www.google.com/maps/dir//Sports+and+Recreational+Center+%22Milan+Gale+Mu%C5%A1katirovi%C4%87%22,+Tadeu%C5%A1a+Ko%C5%A1%C4%87u%C5%A1ka+63,+Beograd+110000/@44.8293988,20.4513149,17.77z/data=!4m9!4m8!1m0!1m5!1m1!1s0x475a65374a579c6f:0x51c018508aaf5907!2m2!1d20.4539115!2d44.8299838!3e0" rel="external" target="_blank">NAVIGACIJA</a>
+        </div>
+	</div>
 <%- include ("partials/footer") -%>
