--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,37 +1,37 @@
 <div class="headerNavigation">
 	<div class="contentWidth">
 		<div class="logoWrap">
-			<img src="/logos/logo.png">
+			<a href="/"><img src="/logos/logo.png"></a>
 		</div>
 		<div class="menuWrap">
 			<div class="social">
 				<div class="itemWrap">
-					<a href="" target="_blank"><img src="/logos/fb.png"></a>
+					<a href="https://www.facebook.com/bazen25maj/" target="_blank"><img src="/logos/fb.png"></a>
 				</div>
 				<div class="itemWrap">
-					<a href="" target="_blank"><img src="/logos/tw.png"></a>
+					<a href="https://twitter.com/bazen25maj" target="_blank"><img src="/logos/tw.png"></a>
 				</div>
 				<div class="itemWrap">
-					<a href="" target="_blank"><img src="/logos/inst.png"></a>
+					<a href="https://instagram.com/bazen_25maj" target="_blank"><img src="/logos/inst.png"></a>
 				</div>
 			</div>
 			<div class="menu">
 				<div class="menuItemWrap">
-					<div class="item"><a href="#">Naslovna</a></div>
+					<div class="item"><a href="/">Naslovna</a></div>
 					<div class="subMenu">
-						<div class="subMenuItem"><a href="#">Dokumenti</a></div>
+						<div class="subMenuItem"><a href="/dokumenti">Dokumenti</a></div>
 						<div class="separator"></div>
-						<div class="subMenuItem"><a href="#">O nama</a></div>
+						<div class="subMenuItem"><a href="/o-nama">O nama</a></div>
 						<div class="separator"></div>
-						<div class="subMenuItem"><a href="#">Javne Nabavke</a></div>
+						<div class="subMenuItem"><a href="/javne-nabavke">Javne Nabavke</a></div>
 					</div>
 				</div>
 				<div class="menuItemWrap">
 					<div class="item"><a href="#">Besplatni Programi</a></div>
 					<div class="subMenu">
-						<div class="subMenuItem"><a href="#">Deca</a></div>
+						<div class="subMenuItem"><a href="/besplatni-programi-deca">Deca</a></div>
 						<div class="separator"></div>
-						<div class="subMenuItem"><a href="#">Penzioneri</a></div>
+						<div class="subMenuItem"><a href="/besplatni-programi-penzioneri">Penzioneri</a></div>
 					</div>
 				</div>
 				<div class="menuItemWrap">
