--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -37,25 +37,25 @@
 				<div class="menuItemWrap">
 					<div class="item"><a href="#">Komercijalni Programi</a></div>
 					<div class="subMenu">
-						<div class="subMenuItem"><a href="#">Bazeni na otvorenom</a></div>
+						<div class="subMenuItem"><a href="/bazeni-na-otvorenom">Bazeni na otvorenom</a></div>
 						<div class="separator"></div>
-						<div class="subMenuItem"><a href="#">Zatvoreni bazen</a></div>
+						<div class="subMenuItem"><a href="/zatvoreni-bazen">Zatvoreni bazen</a></div>
 						<div class="separator"></div>
-						<div class="subMenuItem"><a href="#">Wellness Centar</a></div>
+						<div class="subMenuItem"><a href="/wellness-centar">Wellness Centar</a></div>
 						<div class="separator"></div>
-						<div class="subMenuItem"><a href="#">Sportska Sala</a></div>
+						<div class="subMenuItem"><a href="/sportska-sala">Sportska Sala</a></div>
 						<div class="separator"></div>
-						<div class="subMenuItem"><a href="#">Kombo Paketi</a></div>
+						<div class="subMenuItem"><a href="/kombo-paketi">Kombo Paketi</a></div>
 						<div class="separator"></div>
-						<div class="subMenuItem"><a href="#">Školica Plivanja</a></div>
+						<div class="subMenuItem"><a href="/skolica-plivanja">Školica Plivanja</a></div>
 						<div class="separator"></div>
 					</div>
 				</div>
 				<div class="menuItemWrap">
-					<div class="item"><a href="#">Obaveštenja</a></div>
+					<div class="item"><a href="/obavestenja">Obaveštenja</a></div>
 				</div>
 				<div class="menuItemWrap">
-					<div class="item"><a href="#">Newsletter</a></div>
+					<div class="item"><a href="/newsletter">Newsletter</a></div>
 				</div>
 			</div>
 		</div>
