--- a/public/css/style.css
+++ b/public/css/style.css
@@ -914,6 +914,31 @@ input[type=number] {
 	color: rgb(47,78,176);
 }
 
+.priceTable{
+	border-collapse: collapse;
+	color: rgb(24,40,91);
+	width: 100%;
+	max-width: 700px;
+	margin: 0 auto;
+}
+
+.priceTable td{
+	border: 1px solid rgb(150,150,150);
+	padding: 5px;
+}
+
+.priceTable tr:nth-child(odd){
+	background-color: rgba(47,78,176,0.2);
+}
+
+.priceTable tr td:nth-child(2){
+	width: 120px;
+}
+
+.priceTable tr td:nth-child(3){
+	width: 120px;
+	font-style: italic;
+}
 
 
 
