--- a/views/home.ejs
+++ b/views/home.ejs
@@ -62,7 +62,7 @@
 					var counter			=	0;
 					for(var i=0;i<obavestenja.length;i++){
 						var obavestenjeJson	=	obavestenja[i];
-						if(counter>2){
+						if(counter>=2){
 							break;
 						}
 						if(Number(obavestenjeJson.visible)==1){
