--- a/views/home.ejs
+++ b/views/home.ejs
@@ -59,6 +59,9 @@
 				</div>
 				<script>
 					var obavestenja		=	JSON.parse(<%- JSON.stringify(obavestenja) %>);
+					obavestenja.sort(function(a, b) {
+					    return parseFloat(b.actualdate) - parseFloat(a.actualdate);
+					});
 					var counter			=	0;
 					for(var i=0;i<obavestenja.length;i++){
 						var obavestenjeJson	=	obavestenja[i];
