--- a/views/obavestenja-administracija.ejs
+++ b/views/obavestenja-administracija.ejs
@@ -90,6 +90,9 @@
 			<div class="adminObavestenja"></div>
 			<script>
 				var obavestenja		=	JSON.parse(<%- JSON.stringify(obavestenja) %>);
+				obavestenja.sort(function(a, b) {
+				    return parseFloat(b.actualdate) - parseFloat(a.actualdate);
+				});
 				for(var i=0;i<obavestenja.length;i++){
 					var obavestenjeJson		=	JSON.parse(JSON.stringify(obavestenja[i]));
 					var obavestenje		=	document.createElement("DIV");
