--- a/views/home.ejs
+++ b/views/home.ejs
@@ -76,7 +76,7 @@
 
 								var date	=	document.createElement("DIV");
 								date.setAttribute("class","date");
-								date.innerHTML = obavestenjeJson.date.split("-")[2]+"."+obavestenjeJson.date.split("-")[1]+obavestenjeJson.date.split("-")[0];
+								date.innerHTML = obavestenjeJson.date.split("-")[2]+"."+obavestenjeJson.date.split("-")[1]+"."+obavestenjeJson.date.split("-")[0];
 								obavestenje.appendChild(date);
 
 								var title	=	document.createElement("DIV");
