--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -5,6 +5,9 @@
 		</div>
 		<div class="menuWrap">
 			<div class="social">
+				<div class="contactHeader2" style="">
+					<a href="tel:+381111234567" style="color:rgb(255,255,255)">011/1234-567</a> | <a style="color:rgb(255,255,255)" href="mailto:info@25maj.rs">info@25maj.rs</a>
+				</div>
 				<div class="itemWrap">
 					<a href="https://www.facebook.com/bazen25maj/" target="_blank"><img src="/logos/fb.png"></a>
 				</div>
