--- a/public/css/style.css
+++ b/public/css/style.css
@@ -378,6 +378,20 @@ input[type=number] {
 	transform: translateY(-50%);
 }
 
+.pageFixedContentText{
+	top:268px;
+	text-align: center;
+	position: fixed;
+	z-index: 60;
+	font-size: 22px;
+	font-weight: 300;
+	color: rgb(255,255,255);
+	left: 0;
+	right: 0;
+	padding: 10px;
+	background-color: rgba(47,78,176,0.7);
+}
+
 .pageHeaderSpace{
 	height: 600px;
 }
