--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
 						<div class="icon">
 							<img src="/icons/deca.png">
 						</div>
-						<div class="title">Besplatni programi<br>za decu</div>
+						<div class="title">Бесплатни програми<br>за децу</div>
 					</div>
 				</div>
 				<div class="inline">
@@ -18,7 +18,7 @@
 						<div class="icon">
 							<img src="/icons/penzioneri.png">
 						</div>
-						<div class="title">Besplatni programi<br>za penzionere</div>
+						<div class="title">Бесплатни програми<br>за пензионере</div>
 					</div>
 				</div>
 			</div>
@@ -30,7 +30,7 @@
 		<div class="bottomFade"></div>
 		<div class="imageBackground padded" style="background-image: url(/images/voda.jpg);">
 			<div class="contentWidth">
-				<div class="sectionTitle">NAJNOVIJA OBAVEŠTENJA</div>
+				<div class="sectionTitle">НАЈНОВИЈА ОБАВЕШТЕЊА</div>
 				<div class="obavestenja">
 					<!--<div class="obavestenje">
 						<div class="date">13.05.2022.</div>
@@ -94,7 +94,7 @@
 									var button	=	document.createElement("DIV");
 									button.setAttribute("class","button");
 									button.setAttribute("onclick","window.location.href='/obavestenje/"+obavestenjeJson.id+"'");
-									button.innerHTML	=	"Pročitaj";
+									button.innerHTML	=	"Прочитај";
 									buttonWrap.appendChild(button);
 								obavestenje.appendChild(buttonWrap)
 							document.getElementsByClassName("obavestenja")[0].appendChild(obavestenje);
@@ -103,7 +103,7 @@
 				</script>
 				<div class="padded" style="text-align: center;">
 					<div class="blueButton">
-						<a href="/obavestenja">SVA OBAVEŠTENJA</a>
+						<a href="/obavestenja">СВА ОБАВЕШТЕЊА</a>
 					</div>
 				</div>
 			</div>
@@ -112,7 +112,7 @@
 
 	<div class="section white padded">
 		<div class="contentWidth">
-			<div class="sectionTitle">PRIJAVA ZA NEWSLETTER</div>
+			<div class="sectionTitle">ПРИЈАВА ЗА ЊУЗЛЕТЕР</div>
 			<div class="titleIconSeparator">
 				<div class="line"></div>
 				<div class="icon">
@@ -121,23 +121,22 @@
 				<div class="line"></div>
 			</div>
 			<div class="smallText">
-				Ostavite e-mail ili mobilni telefon ( ili oba :) ) i budite u toku sa najnovijim dešavanjima vezano za 25. Maj.<br>
-				Vaši podaci se čuvaju enkriptovani i služe isključivo radi kontakta.  
+				Оставите е-мејл или мобилни телефон и будите у току са најновијим дешавањима везано за 25. Мај.<br>Ваши подаци се чувају енкриптовани и служе исклјучиво ради контакта.
 			</div>
 			<div class="smallContent" style="margin-top:10px">
 				<div class="newsletter inlineHalf">
 					<form>
 						<div class="inline">
-							<input type="email" placeholder="E-mail">
+							<input type="email" placeholder="Е-мејл">
 						</div>
 						<div class="inline">
-							<input type="tel" placeholder="Telefon">
+							<input type="tel" placeholder="Телефон">
 						</div>
 					</form>
 				</div>
 				<div style="text-align: center;margin-top:10px">
 					<div class="blueButton">
-						<a href="#">PRIJAVA</a>
+						<a href="#">ПРИЈАВА</a>
 					</div>
 				</div>
 			</div>
@@ -148,7 +147,7 @@
 		<script src="/js/map.js?<%=fileVersion%>"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsUyoMs0Ba_6bPbtD5A5_1yOJXjjMYsMQ&amp;callback=initMap" async="" defer=""></script>
         <div class="navButton blueButton">
-        	<a href="https://www.google.com/maps/dir//Sports+and+Recreational+Center+%22Milan+Gale+Mu%C5%A1katirovi%C4%87%22,+Tadeu%C5%A1a+Ko%C5%A1%C4%87u%C5%A1ka+63,+Beograd+110000/@44.8293988,20.4513149,17.77z/data=!4m9!4m8!1m0!1m5!1m1!1s0x475a65374a579c6f:0x51c018508aaf5907!2m2!1d20.4539115!2d44.8299838!3e0" rel="external" target="_blank">NAVIGACIJA</a>
+        	<a href="https://www.google.com/maps/dir//Sports+and+Recreational+Center+%22Milan+Gale+Mu%C5%A1katirovi%C4%87%22,+Tadeu%C5%A1a+Ko%C5%A1%C4%87u%C5%A1ka+63,+Beograd+110000/@44.8293988,20.4513149,17.77z/data=!4m9!4m8!1m0!1m5!1m1!1s0x475a65374a579c6f:0x51c018508aaf5907!2m2!1d20.4539115!2d44.8299838!3e0" rel="external" target="_blank">НАВИГАЦИЈА</a>
         </div>
 	</div>
 <%- include ("partials/footer") -%>
