--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -5,17 +5,26 @@
 		</div>
 		<div class="menuWrap">
 			<div class="social">
-				<div class="contactHeader2" style="">
-					<a href="tel:+381111234567" style="color:rgb(255,255,255)">011/1234-567</a> | <a style="color:rgb(255,255,255)" href="mailto:info@25maj.rs">info@25maj.rs</a>
+				<div class="contactHeader2">
+					<a href="tel:+381111234567">011/1234-567</a> | <a href="mailto:info@25maj.rs">инфо@25мај.рс</a>
 				</div>
 				<div class="itemWrap">
-					<a href="https://www.facebook.com/bazen25maj/" target="_blank"><img src="/logos/fb.png"></a>
+					<a href="https://www.facebook.com/bazen25maj/" target="_blank">
+						<img class="icon" src="/logos/fb.png">
+						<img class="cIcon" src="/logos/fb-y.png">
+					</a>
 				</div>
 				<div class="itemWrap">
-					<a href="https://twitter.com/bazen25maj" target="_blank"><img src="/logos/tw.png"></a>
+					<a href="https://twitter.com/bazen25maj" target="_blank">
+						<img class="icon" src="/logos/tw.png">
+						<img class="cIcon" src="/logos/tw-y.png">
+					</a>
 				</div>
 				<div class="itemWrap">
-					<a href="https://instagram.com/bazen_25maj" target="_blank"><img src="/logos/inst.png"></a>
+					<a href="https://instagram.com/bazen_25maj" target="_blank">
+						<img class="icon" src="/logos/inst.png">
+						<img class="cIcon" src="/logos/inst-y.png">
+					</a>
 				</div>
 				<div class="itemWrap responsiveMenuHandle" style="background-color:rgba(0,0,0,0)" data-opened="0" onclick="openMenu(this)">
 					<img id="menuIcon" src="/icons/menu-closed-yellow.png">
@@ -40,51 +49,83 @@
 			</div>
 			<div class="menu">
 				<div class="menuItemWrap">
-					<div class="item">Naslovna</div>
+					<div class="item" onclick="responsiveOpener(this)">
+						<div class="text">Насловна</div>
+						<div class="carret">
+							<img class="whiteIcon" src="/icons/carret.png">
+							<img class="colored" src="/icons/carret-blue.png">
+						</div>
+					</div>
 					<div class="subMenu">
-						<div class="subMenuItem"><a href="/dokumenti">Dokumenti</a></div>
+						<div class="subMenuItem"><a href="/dokumenti">Документи</a></div>
 						<div class="separator"></div>
-						<div class="subMenuItem"><a href="/o-nama">O nama</a></div>
+						<div class="subMenuItem"><a href="/o-nama">О нама</a></div>
 						<div class="separator"></div>
-						<div class="subMenuItem"><a href="/javne-nabavke">Javne Nabavke</a></div>
+						<div class="subMenuItem"><a href="/javne-nabavke">Јавне Набавке</a></div>
 					</div>
 				</div>
 				<div class="menuItemWrap">
-					<div class="item">Besplatni Programi</div>
+					<div class="item" onclick="responsiveOpener(this)">
+						<div class="text">Бесплатни програми</div>
+						<div class="carret">
+							<img class="whiteIcon" src="/icons/carret.png">
+							<img class="colored" src="/icons/carret-blue.png">
+						</div>
+					</div>
 					<div class="subMenu">
-						<div class="subMenuItem"><a href="/besplatni-programi-deca">Deca</a></div>
+						<div class="subMenuItem"><a href="/besplatni-programi-deca">Деца</a></div>
 						<div class="separator"></div>
-						<div class="subMenuItem"><a href="/besplatni-programi-penzioneri">Penzioneri</a></div>
+						<div class="subMenuItem"><a href="/besplatni-programi-penzioneri">Пензионери</a></div>
 					</div>
 				</div>
 				<div class="menuItemWrap">
-					<div class="item">Komercijalni Programi</div>
+					<div class="item" onclick="responsiveOpener(this)">
+						<div class="text">Комерцијални програми</div>
+						<div class="carret">
+							<img class="whiteIcon" src="/icons/carret.png">
+							<img class="colored" src="/icons/carret-blue.png">
+						</div>
+					</div>
 					<div class="subMenu">
-						<div class="subMenuItem"><a href="/bazeni-na-otvorenom">Bazeni na otvorenom</a></div>
+						<div class="subMenuItem"><a href="/bazeni-na-otvorenom">Базени на отвореном</a></div>
 						<div class="separator"></div>
-						<div class="subMenuItem"><a href="/zatvoreni-bazen">Zatvoreni bazen</a></div>
+						<div class="subMenuItem"><a href="/zatvoreni-bazen">Затворени базен</a></div>
 						<div class="separator"></div>
-						<div class="subMenuItem"><a href="/wellness-centar">Wellness Centar</a></div>
+						<div class="subMenuItem"><a href="/wellness-centar">Wellness Центар</a></div>
 						<div class="separator"></div>
-						<div class="subMenuItem"><a href="/sportska-sala">Sportska Sala</a></div>
+						<div class="subMenuItem"><a href="/sportska-sala">Спортска Сала</a></div>
 						<div class="separator"></div>
-						<div class="subMenuItem"><a href="/kombo-paketi">Kombo Paketi</a></div>
+						<div class="subMenuItem"><a href="/kombo-paketi">Комбо пакети</a></div>
 						<div class="separator"></div>
-						<div class="subMenuItem"><a href="/skolica-plivanja">Školica Plivanja</a></div>
+						<div class="subMenuItem"><a href="/skolica-plivanja">Школица пливања</a></div>
 						<div class="separator"></div>
 					</div>
 				</div>
 				<div class="menuItemWrap">
-					<div class="item"><a href="/obavestenja">Obaveštenja</a></div>
+					<div class="item"><a href="/obavestenja">Обавештења</a></div>
 				</div>
-				<div class="menuItemWrap">
-					<div class="item"><a href="/">Newsletter</a></div>
-				</div>
+				<!--<div class="menuItemWrap">
+					<div class="item"><a href="/">Њузлетер</a></div>
+				</div>-->
+				<script>
+					function responsiveOpener(elem){
+						if(document.getElementsByClassName("menu")[0].classList.contains("menuOpened")){
+							if(elem.classList.contains("subMenuOpened")){
+								elem.classList.remove("subMenuOpened");
+								elem.parentElement.getElementsByClassName("subMenu")[0].style.display="none";
+							}else{
+								elem.classList.add("subMenuOpened");
+								elem.parentElement.getElementsByClassName("subMenu")[0].style.display="block";
+
+							}
+						}
+					}
+				</script>
 			</div>
 		</div>
 	</div>
 </div>
 
 <div class="headerContact">
-	<a href="tel:+381111234567">011/1234-567</a> | <a href="mailto:info@25maj.rs">info@25maj.rs</a>
+	<a href="tel:+381111234567"><img src="/icons/phone.png"></a><a href="mailto:info@25maj.rs"><img src="/icons/e-mail.png"></a>
 </div>
